@@ -2,6 +2,7 @@ Revision history for Mojolicious-Plugin-AssetPack
 
 0.04
        * Add support for custom out_dir
+       * Fix bug: Cannot lookup preprocessor based on moniker extension
 
 0.03     Mon Oct 28 18:31:03 2013
        * Use md5sum instead of timestamp in filenames
